Store data about periods, add period filter button to achievements